[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "infra-hex-py"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "geopandas>=1.0.0",
    "pyarrow>=17.0.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
viz = [
    "folium>=0.20.0",
    "branca>=0.6.0",
    "streamlit>=1.52.1",
    "streamlit-folium>=0.25.3",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "maturin==1.10.2",
    "pytest==9.0.2",
]

[tool.maturin]
python-source = "python"
module-name = "infra_hex_py.infra_hex_py"

[tool.pytest.ini_options]
addopts = "-vv -s"
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["python"]
pythonVersion = "3.12"
